// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`.not.toContainAllKeys > fails when given object contains all keys 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).not.toContainAllKeys([22m[32mexpected[39m[2m)[22m

Expected object to not contain all keys:
  [32mArray [
  \\"b\\",
  \\"a\\",
][39m
Received:
  [31mArray [
  \\"a\\",
  \\"b\\",
][39m"
`;

exports[`.toContainAllKeys > fails when all of the object keys are matched, but there are additional keys  1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainAllKeys([22m[32mexpected[39m[2m)[22m

Expected object to contain all keys:
  [32mArray [
  \\"a\\",
  \\"c\\",
][39m
Received:
  [31mArray [
  \\"a\\",
  \\"b\\",
][39m"
`;

exports[`.toContainAllKeys > fails when given an empty object 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainAllKeys([22m[32mexpected[39m[2m)[22m

Expected object to contain all keys:
  [32mArray [
  \\"a\\",
][39m
Received:
  [31mArray [][39m"
`;

exports[`.toContainAllKeys > fails when given object does not contain all keys 1`] = `
"[2mexpect([22m[31mreceived[39m[2m).toContainAllKeys([22m[32mexpected[39m[2m)[22m

Expected object to contain all keys:
  [32mArray [
  \\"a\\",
][39m
Received:
  [31mArray [
  \\"a\\",
  \\"b\\",
][39m"
`;
